# shortwave

./: .gitignore  Cargo.toml  README.md  openapi.yaml
examples/: cli_player.py  playlist_streamer.py
src/: config.rs  crypto.rs  http.rs  ipc.rs  main.rs  p2p.rs  state.rs  types.rs
web_player/: README.md  index.html  package-lock.json  package.json  start.sh  vite.config.js
web_player/src/: App.css  App.jsx  index.css
