 [package]
 name = "shortwave"
 version = "0.1.0"
 edition = "2021"

 [dependencies]
 anyhow = "1.0"
 axum = { version = "0.7" }
bigdecimal = { version = "0.4", features = ["serde"] }
 bytes = "1.10"
 chrono = { version = "0.4", features = ["serde", "clock"] }
 clap = { version = "4.5", features = ["derive", "env"] }
ed25519-dalek = { version = "2", features = ["serde"] }
base64 = "0.22"
rand_core = "0.6"
rand = "0.8"
 reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
serde_yaml = "0.9"
 thiserror = "1.0"
 tokio = { version = "1.48", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
 tower = "0.4"
 tower-http = { version = "0.5", features = ["cors", "trace", "compression-full", "util"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
 uuid = { version = "1.18", features = ["v4", "serde"] }
futures-core = "0.3"
futures-util = "0.3"
ipnet = "2"
libp2p = { version = "0.53", features = ["tokio","gossipsub","tcp","dns","noise","yamux","mdns","macros"] }

